# ocarina-tui

./: .gitattributes  CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml  site.yml
assets/zelda3sf2/: 000_079 Ocarina.sf2  LttPSF2.sf2  LttPSF2_only_ocarina.sf2  oot_bolerooffire.mid  oot_escgt.mid  oot_fairyflying.mid  oot_fairyfountain.mid  oot_fairyocarina.mid  oot_ganon.mid  oot_ganondorf.mid  oot_ganondorfbatt.mid  oot_gerudo.mid  oot_getheart.mid  oot_goron.mid  oot_house.mid  oot_hyrulefield1.mid  oot_hyrulefield2.mid  oot_item_big.mid  oot_item_small.mid  oot_kandk.mid  oot_kokiri.mid  oot_lonlonesc.mid  oot_lostforest.mid  oot_mastersword.mid  oot_minigame.mid  oot_minofwood.mid  oot_ocarina_eponassong.mid  oot_ocarina_saria.mid  oot_ocarina_songofstorms.mid  oot_ocarina_songoftime.mid  oot_ocarina_sunssong.mid  oot_ocarina_zeldalullaby.mid  oot_opdot.mid  oot_opening.mid  oot_secretchest.mid  oot_selectscreen.mid  oot_shooting.mid  oot_shop.mid  oot_spiritual.mid  oot_tot.mid  (+2 more)
media/: logo.typ
src/: main.rs  song.rs
