[package]
name = "ocarina-tui"
description = "play the ocarina of time in the terminal"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/sermuns/ocarina-tui"
license = "WTFPL"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
ratatui = "0.30.0"
rustysynth = "1.3.6"
tinyaudio = "2.0.0"
